[gd_scene load_steps=5 format=2]

[ext_resource path="res://card.png" type="Texture" id=1]
[ext_resource path="res://Card.gd" type="Script" id=2]
[ext_resource path="res://card_face_up.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 162.955, 209.8 )

[node name="Card" type="Area2D"]
scale = Vector2( 1, 1.00182 )
script = ExtResource( 2 )

[node name="FaceDown" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="FaceUp" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="MouseDetector" type="CollisionShape2D" parent="."]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -32.0
margin_top = -59.0
margin_right = 32.0
margin_bottom = -45.0
align = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="." to="." method="_on_card_clicked"]
